--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Agha Faseeh Ahmed Khan</h1>
         <h2 id="professionName">Web Developer</h2>
         <p>
-          +92334-9632581 | aghafaseeh07@gmail.com | Jinnah View Apartment,
+          +92334-9632581 | aghafaseeh07@gmail.com |  Shah e Faisal,
           Karachi
         </p>
         <img
